Agrega mapeo de MembershipType y librería commons